--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -2,7 +2,7 @@
 //Sass VENDORS//
 //======================================================//
 // @link https://github.com/eduardoboucas/include-media
-@import ../libs/include-media/dist/_include-media
+@import ../libs/include-media/dist/include-media
 
 //======================================================//
 //Sass UTILS//
@@ -36,7 +36,7 @@
 @import partials/aside
 @import partials/navigation
 @import partials/footer
-@import partials/forms
+@import partials/forms-default
 
 /*======================================================*/
 /*COMPONENTS*/
@@ -44,7 +44,8 @@
 @import components/buttons
 @import components/files
 @import components/breadcrumbs
-@import components/slider
+@import components/sliders
+@import components/user-form
 @import components/bitrix-search
 
 /*======================================================*/
