--- a/src/sass/components/_bitrix-search.sass
+++ b/src/sass/components/_bitrix-search.sass
@@ -1,7 +1,11 @@
+@import ../utils/variables
+@import ../utils/mixins
+@import ../../libs/include-media/dist/include-media
+
 /*bitrix default search page*/
 .search-page
 	font-size: round-float($font-size*0.85, 1)
-	margin-bottom: $bottom-space-section
+	margin-bottom: $bottom-space-lg
 
 	.pagination-wrap
 		margin-bottom: $bottom-space
@@ -10,7 +14,7 @@
 
 	.p-nav-title
 		+font(2.0rem, 1.4)
-		+font-title
+		+font-alt-bold
 		margin-bottom: $bottom-space
 
 	.pagination
