--- a/src/sass/components/_breadcrumbs.sass
+++ b/src/sass/components/_breadcrumbs.sass
@@ -1,70 +1,69 @@
+@import ../utils/variables
+@import ../utils/mixins
+@import ../../libs/include-media/dist/include-media
+
 /*breadcrumbs*/
 .breadcrumbs
-	// цвет ссылки хлебных крошек
-	$bc-color-link: black
-
-	font-size: 1.6rem
 	color: $text-color-light
 	margin-bottom: $bottom-space
 
-	@at-root .breadcrumbs__list, .#{$user-content} .breadcrumbs__list
-		padding: 0
+.breadcrumbs__list, .#{$user-content} .breadcrumbs__list
+	padding: 0
+	margin: 0
+
+	li
+		padding: 0 17px 0 0
 		margin: 0
 
-		li
-			padding: 0 17px 0 0
-			margin: 0
+		&::before, &:first-child::before
+			content: none
 
-			&::before, &:first-child::before
-				content: none
+.breadcrumbs__list
+	cursor: default
+	overflow: hidden
 
-	@at-root &__list
-		cursor: default
-		overflow: hidden
+	li
+		display: inline-block
+		vertical-align: top
+		position: relative
 
-		li
+		&::after
+			content: '/'
+			position: absolute
+			right: 10px
+			top: 1px
+			height: 0
+			width: 0
+			line-height: 1.2
+			border: none
+			color: $text-color-alt
+
+		&:last-child::after
+			content: none
+
+		span
 			display: inline-block
 			vertical-align: top
-			position: relative
+			line-height: 1.2
+			+truncate(260px)
 
-			&::after
-				content: '/'
-				position: absolute
-				right: 10px
-				top: 1px
-				height: 0
-				width: 0
-				line-height: 1.2
-				border: none
-				color: $text-color-alt
+	a
+		display: inline-block
+		vertical-align: top
+		color: $text-color-alt
+		text-decoration: none
+		cursor: pointer
 
-			&:last-child::after
-				content: none
-
-			span
-				display: inline-block
-				vertical-align: top
-				line-height: 1.2
-				max-width: 260px
-				+truncate
-
-		a
-			display: inline-block
-			vertical-align: top
-			color: $bc-color-link
+		.no-touchevents &:hover
 			text-decoration: none
-			cursor: pointer
 
-			.no-touchevents &:hover
-				text-decoration: none
+		span
+			border-bottom: 1px solid transparent
+			transition-property: border-color, color
+			transition-duration: $animation-speed
 
-			span
-				border-bottom: 1px solid tint($bc-color-link, 30%)
-				transition-property: border-color, color
-				transition-duration: $animation-speed
-
-			.no-touchevents &:hover span
-				border-color: transparent
-				color: $text-color-alt
+		.no-touchevents &:hover span
+			border-color: tint($text-color-alt, 30%)
+			color: $text-color-alt
 
 /*breadcrumbs end*/
