--- a/src/sass/components/_files.sass
+++ b/src/sass/components/_files.sass
@@ -1,3 +1,7 @@
+@import ../utils/variables
+@import ../utils/mixins
+@import ../../libs/include-media/dist/include-media
+
 /*files links*/
 .file
 	$file-icon-size: 32px
