--- a/src/sass/partials/_aside.sass
+++ b/src/sass/partials/_aside.sass
@@ -1,2 +1,6 @@
+@import ../utils/variables
+@import ../utils/mixins
+@import ../../libs/include-media/dist/include-media
+
 /*ASIDE*/
 /*ASIDE end*/
