--- a/src/sass/partials/_header.sass
+++ b/src/sass/partials/_header.sass
@@ -1,3 +1,7 @@
+@import ../utils/variables
+@import ../utils/mixins
+@import ../../libs/include-media/dist/include-media
+
 /*HEADER*/
 .header__holder
 	padding: 10px 0
