--- a/src/sass/print/_print.sass
+++ b/src/sass/print/_print.sass
@@ -1,4 +1,6 @@
-@import "../utils/mixins"
+@import ../utils/variables
+@import ../utils/mixins
+@import ../../libs/include-media/dist/include-media
 
 @media print
 	*,
