--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -47,6 +47,7 @@
 @import components/sliders
 @import components/user-form
 @import components/bitrix-search
+@import components/feature-list
 
 /*======================================================*/
 /*PAGES*/
