--- a/src/sass/fonts/_fonts.sass
+++ b/src/sass/fonts/_fonts.sass
@@ -8,7 +8,7 @@
 // =============================================================================
 // Google Fonts
 // =============================================================================
-+font-face("candara-regular", "../fonts/candara/regular/candara", normal, normal, eot woff ttf svg)
-+font-face("candara-bold", "../fonts/candara/bold/candarab", normal, normal, eot woff ttf svg)
-+font-face("candara-italic", "../fonts/candara/italic/candarai", normal, normal, eot woff ttf svg)
-+font-face("candara-bold-italic", "../fonts/candara/bold-italic/candaraz", normal, normal, eot woff ttf svg)
+//+font-face("candara-regular", "../fonts/candara/regular/candara", normal, normal, eot woff ttf svg)
+//+font-face("candara-bold", "../fonts/candara/bold/candarab", normal, normal, eot woff ttf svg)
+//+font-face("candara-italic", "../fonts/candara/italic/candarai", normal, normal, eot woff ttf svg)
+//+font-face("candara-bold-italic", "../fonts/candara/bold-italic/candaraz", normal, normal, eot woff ttf svg)
