--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -128,7 +128,8 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 			height: 100%
 
 .entry-img__title
-	+centering()
+	position: absolute
+	+centering-transform()
 	z-index: 10
 	font-size: $font-size-h1
 	color: white
